Responsive home page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en-us">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>nhjjjjjjjjjj</title>
+        <title>Portfolio by Xatta</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/responsive.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -29,36 +30,41 @@
     <div class="main-content">
         <div class="left side">
 
-            <div class="left-side">
+            <div class="left-side left-responsive">
                 <div class="table">
                     <div class="tcell about-me">
-                        <div class="about-me-container">
-                            <h2>About Me</h2>
-                            <i class="fa fa-address-card" aria-hidden="true"></i>
-
-                        </div>
+                        <a href="#about-me">
+                            <div class="about-me-container">
+                                <h2>About Me</h2>
+                                <i class="fa fa-address-card" aria-hidden="true"></i>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
 
-            <div class="left-side" >
+            <div class="left-side left-responsive" >
                 <div class="table">
                     <div class="tcell skill">
-                        <div class="skillset-container">
-                            <h2>Skillset</h2>
-                             <i class="fa fa-line-chart" aria-hidden="true"></i>
-                        </div>
+                        <a href="#skill">
+                            <div class="skillset-container">
+                                <h2>Skillset</h2>
+                                 <i class="fa fa-line-chart" aria-hidden="true"></i>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
 
-            <div class="left-side" >
+            <div class="left-side left-responsive" >
                 <div class="table">
                     <div class="tcell portfolio">
-                        <div class="portfolio-container">
-                            <h2>Portfolio</h2>
-                            <i class="fa fa-briefcase" aria-hidden="true"></i>
-                        </div>
+                        <a href="#portfolio">
+                            <div class="portfolio-container">
+                                <h2>Portfolio</h2>
+                                <i class="fa fa-briefcase" aria-hidden="true"></i>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -98,36 +104,42 @@
             </div>
          </div>
 
-         <div class="right side">
-            <div class="right-side">
+         <div class="right side ">
+            <div class="right-side right-responsive">
                 <div class="table">
                     <div class="tcell resume">
-                        <div class="resume-container">
-                            <h2>Resume</h2>
-                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                        </div>
+                        <a href="#resume">
+                            <div class="resume-container">
+                                <h2>Resume</h2>
+                                <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
 
-            <div class="right-side" >
+            <div class="right-side right-responsive" >
                 <div class="table">
                     <div class="tcell clients">
-                        <div class="clients-container">
-                            <h2>Clients</h2>
-                            <i class="fa fa-users" aria-hidden="true"></i>
-                        </div>
+                        <a href="#clients">
+                            <div class="clients-container">
+                                <h2>Clients</h2>
+                                <i class="fa fa-users" aria-hidden="true"></i>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
 
-            <div class="right-side">
+            <div class="right-side right-responsive">
                 <div class="table">
                     <div class="tcell contact">
-                        <div class="contact-container">
-                            <h2>Shout Out</h2>
-                            <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                        </div>
+                        <a href="#contact">
+                            <div class="contact-container">
+                                <h2>Shout Out</h2>
+                                <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
