--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- Add your site or application content here -->
 
 
-<div class="container">
+<div class="container home-container">
     <div class="main-content">
         <div class="left side">
 
@@ -153,7 +153,89 @@
 </div>
 -->
 
+<div class="container about-container " id="about-me">
+    <div class="table about-overlay">
+        <div class="tcell about-section">
+            <div class="about">
+                <div class="about-header">
+                     <h1>Want to know about me !!</h1>
+                </div> 
+                <div class="about-content clearfix">
+                    <img src="img/user-about.png">
+                    <div class="about-details">
+                        <h2>Jane Doe</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aperiam nostrum minus laboriosam vel, laborum maiores odit mollitia recusandae, id voluptatem quas blanditiis ab esse, sapiente dignissimos nulla ducimus explicabo, quo. Ullam eius delectus consequuntur eos fugit excepturi quis expedita fugiat rem, facilis dolorum similique perspiciatis quia, vero sit ipsum.</p>
+                        <div class="hobbies clearfix">
+                            <h2>My Hobbies</h2>
+                            <div class="hobby">
+                               <span> 
+                                    <i class="fa fa-headphones" aria-hidden="true"></i>
+                               </span>
+                                <p>
+                                    Music
+                                </p>
+                            </div>
+                            <div class="hobby">
+                                <span>
+                                     <i class="fa fa-gamepad" aria-hidden="true"></i>
+                                </span>
+                               <p>
+                                    Game
+                               </p>
+                            </div>
+                            <div class="hobby">
+                                <span>
+                                    <i class="fa fa-subway" style="margin-top:5px;" aria-hidden="true"></i>
+                                </span>
+                                <p>
+                                    Travel
+                                </p>
+                            </div>
+                            <div class="hobby">
+                                <span>
+                                    <i class="fa fa-money" aria-hidden="true"></i>
+                                </span>
+                                <p>
+                                    Money
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
+<div class="container skill-container" id="skill">
+    <div class="table skill-overlay">
+        <div class="tcell">
+            <div class="skillset-details ">
+                <h1>Skills I Have..!!</h1>
+                <div class="skills-details clearfix">
+                    <div class="skills">
+                        <div id="html"></div>
+                    </div>
+                    <div class="skills">
+                        <div id="css"></div>
+                    </div>
+                    <div class="skills">
+                        <div id="js"></div>
+                    </div>
+                    <div class="skills">
+                        <div id="php"></div>
+                    </div>
+                    <div class="skills">
+                        <div id="mysql"></div>
+                    </div>
+                    <div class="skills">
+                        <div id="angular"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
@@ -191,6 +273,7 @@
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
+        <script type="text/javascript" src="js/progressbar.min.js"></script>
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
