added contact section

--- a/index.html
+++ b/index.html
@@ -431,7 +431,67 @@
     </div>
 </div>
 
+<div class="container container-contact-bg">
+    <div class="table contact-overlay">
+        <div class="tcell">
+            <div class="contact-details clearfix">
+               <div class="contact-form">
+                   <h1>Get in Touch</h1>
+                   <form method="post" action="#">
+                   
+                        <input type="text" name="name" placeholder="Your Name*" ><br>
+                        <input type="email" name="email" placeholder="Your E-mail*"><br/>
+                        <textarea cols="20" rows="5" placeholder="Your Ideas"></textarea><br>
+                        <span>*required</span><br>
+                        <input type="button" name="button" value="Kick off">
+                       
+                   </form>
+               </div>
+               <div class="addressbar clearfix">
+                    <div class="addressbar-details clearfix">
+                           <span>
+                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                       </span>
+                       <div class="text">
+                           <h3>Address</h3>
+                           <p>221 Baker street
+                           <br>
+                           London,UK</p>
 
+                       </div>
+                   </div>
+
+                   <div class="addressbar-details clearfix">
+                           <span>
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                       </span>
+                       <div class="text">
+                           <h3>E-mail</h3>
+                           <p>xatta.trone@gmail.com
+                           <br>
+                           xatta-trone@xatta.trone
+                           </p>
+
+                       </div>
+                   </div>
+
+                   <div class="addressbar-details clearfix">
+                           <span>
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                       </span>
+                       <div class="text">
+                           <h3>Phone</h3>
+                           <p>+880 100 0001 177
+                           <br>
+                           +77 000 0885 234</p>
+
+                       </div>
+                   </div>
+               </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
