--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
             <div class="contact-details clearfix">
                <div class="contact-form">
                    <h1>Get in Touch</h1>
-                   <form method="post" action="#">
+                   <form method="post" action="http://formspree.io/xatta.trone@gmail.com">
                    
                         <input type="text" name="name" placeholder="Your Name*" ><br>
                         <input type="email" name="email" placeholder="Your E-mail*"><br/>
