submit button fixed

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                         <input type="email" name="email" placeholder="Your E-mail*"><br/>
                         <textarea cols="20" rows="5" placeholder="Your Ideas"></textarea><br>
                         <span>*required</span><br>
-                        <input type="button" name="button" value="Kick off">
+                        <input type="submit" name="button" value="Kick off">
                        
                    </form>
                </div>
