form submit problem solved

--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
                    
                         <input type="text" name="name" placeholder="Your Name*" ><br>
                         <input type="email" name="email" placeholder="Your E-mail*"><br/>
-                        <textarea cols="20" rows="5" placeholder="Your Ideas"></textarea><br>
+                        <textarea cols="20" rows="5" name="message" placeholder="Your Ideas"></textarea><br>
                         <span>*required</span><br>
-                        <input type="submit" name="button" value="Kick off">
+                        <input type="submit"  value="Kick off">
                        
                    </form>
                </div>
